// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewMessageView Item should match snapshot when hasMediaCallPermission is false 1`] = `
<View
  style={
    [
      {
        "marginHorizontal": 16,
      },
      {
        "backgroundColor": "#FFFFFF",
      },
      undefined,
      undefined,
    ]
  }
>
  <ViewManagerAdapter_ExpoUI
    colorScheme="light"
    ignoreSafeArea="all"
    layoutDirection="leftToRight"
    style={
      [
        {
          "width": "100%",
        },
        {
          "height": 54,
        },
      ]
    }
  >
    <ViewManagerAdapter_ExpoUI
      modifiers={
        [
          {
            "$type": "padding",
            "horizontal": 16,
          },
        ]
      }
      onGlobalEvent={[Function]}
      spacing={12}
    >
      <ViewManagerAdapter_ExpoUI
        modifiers={
          [
            {
              "$type": "buttonStyle",
              "style": "plain",
            },
            {
              "$type": "accessibilityLabel",
              "label": "John Doe",
            },
          ]
        }
        onButtonPress={[Function]}
        onGlobalEvent={[Function]}
        testID="new-message-view-item-john.doe"
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "contentShape",
                "kind": undefined,
                "shape": "rectangle",
              },
            ]
          }
          onGlobalEvent={[Function]}
          spacing={12}
        >
          <ViewManagerAdapter_ExpoUI
            expoInternalSizeFromChildren={true}
            layoutRoot={false}
            matchContents={true}
          >
            <View
              accessibilityLabel="john.doe's avatar"
              accessible={true}
              style={
                [
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  },
                  undefined,
                ]
              }
              testID="avatar"
            >
              <ViewManagerAdapter_ExpoImage
                borderRadius={4}
                containerViewRef={{"current":"Object"}}
                contentFit="cover"
                contentPosition={
                  {
                    "left": "50%",
                    "top": "50%",
                  }
                }
                height={30}
                nativeViewRef={{"current":"NativeComponent"}}
                onError={[Function]}
                onLoad={[Function]}
                onLoadStart={[Function]}
                onProgress={[Function]}
                placeholder={[]}
                priority="high"
                sfEffect={null}
                source={
                  [
                    {
                      "headers": {
                        "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                      },
                      "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=60",
                    },
                  ]
                }
                style={
                  {
                    "borderRadius": 4,
                    "height": 30,
                    "width": 30,
                  }
                }
                symbolSize={null}
                symbolWeight={null}
                transition={null}
                width={30}
              />
            </View>
          </ViewManagerAdapter_ExpoUI>
          <ViewManagerAdapter_ExpoUI
            alignment="leading"
            spacing={2}
          >
            <ViewManagerAdapter_ExpoUI
              modifiers={
                [
                  {
                    "$type": "lineLimit",
                    "limit": 1,
                    "reservesSpace": undefined,
                  },
                  {
                    "$type": "font",
                    "size": 16,
                    "weight": "medium",
                  },
                  {
                    "$type": "foregroundStyle",
                    "style": {
                      "color": "#2F343D",
                      "type": "color",
                    },
                  },
                ]
              }
              onGlobalEvent={[Function]}
              text="John Doe"
            />
          </ViewManagerAdapter_ExpoUI>
          <ViewManagerAdapter_ExpoUI />
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </ViewManagerAdapter_ExpoUI>
  </ViewManagerAdapter_ExpoUI>
</View>
`;

exports[`Story Snapshots: Default should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 100,
      "padding": 24,
    }
  }
>
  <View
    style={
      [
        {
          "marginHorizontal": 16,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
        undefined,
      ]
    }
  >
    <ViewManagerAdapter_ExpoUI
      colorScheme="light"
      ignoreSafeArea="all"
      layoutDirection="leftToRight"
      style={
        [
          {
            "width": "100%",
          },
          {
            "height": 54,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        modifiers={
          [
            {
              "$type": "padding",
              "horizontal": 16,
            },
          ]
        }
        onGlobalEvent={[Function]}
        spacing={12}
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "buttonStyle",
                "style": "plain",
              },
              {
                "$type": "accessibilityLabel",
                "label": "John Doe",
              },
              {
                "$type": "onLongPressGesture",
                "eventListener": [Function],
                "minimumDuration": 0.5,
              },
            ]
          }
          onButtonPress={[Function]}
          onGlobalEvent={[Function]}
          testID="new-message-view-item-john.doe"
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "contentShape",
                  "kind": undefined,
                  "shape": "rectangle",
                },
              ]
            }
            onGlobalEvent={[Function]}
            spacing={12}
          >
            <ViewManagerAdapter_ExpoUI
              expoInternalSizeFromChildren={true}
              layoutRoot={false}
              matchContents={true}
            >
              <View
                accessibilityLabel="john.doe's avatar"
                accessible={true}
                style={
                  [
                    {
                      "borderRadius": 4,
                      "height": 30,
                      "width": 30,
                    },
                    undefined,
                  ]
                }
                testID="avatar"
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="cover"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={30}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  priority="high"
                  sfEffect={null}
                  source={
                    [
                      {
                        "headers": {
                          "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                        },
                        "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=60",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 30,
                      "width": 30,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={30}
                />
              </View>
            </ViewManagerAdapter_ExpoUI>
            <ViewManagerAdapter_ExpoUI
              alignment="leading"
              spacing={2}
            >
              <ViewManagerAdapter_ExpoUI
                modifiers={
                  [
                    {
                      "$type": "lineLimit",
                      "limit": 1,
                      "reservesSpace": undefined,
                    },
                    {
                      "$type": "font",
                      "size": 16,
                      "weight": "medium",
                    },
                    {
                      "$type": "foregroundStyle",
                      "style": {
                        "color": "#2F343D",
                        "type": "color",
                      },
                    },
                  ]
                }
                onGlobalEvent={[Function]}
                text="John Doe"
              />
            </ViewManagerAdapter_ExpoUI>
            <ViewManagerAdapter_ExpoUI />
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "buttonStyle",
                "style": "borderless",
              },
              {
                "$type": "disabled",
                "disabled": false,
              },
              {
                "$type": "accessibilityLabel",
                "label": "Voice call",
              },
            ]
          }
          onButtonPress={[Function]}
          onGlobalEvent={[Function]}
          testID="new-message-view-item-john.doe-call"
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "font",
                  "size": 20,
                },
                {
                  "$type": "foregroundStyle",
                  "style": {
                    "color": "#2F343D",
                    "type": "color",
                  },
                },
              ]
            }
            systemName="phone"
          />
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </ViewManagerAdapter_ExpoUI>
  </View>
</View>
`;

exports[`Story Snapshots: LongName should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 100,
      "padding": 24,
    }
  }
>
  <View
    style={
      [
        {
          "marginHorizontal": 16,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
        undefined,
      ]
    }
  >
    <ViewManagerAdapter_ExpoUI
      colorScheme="light"
      ignoreSafeArea="all"
      layoutDirection="leftToRight"
      style={
        [
          {
            "width": "100%",
          },
          {
            "height": 54,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        modifiers={
          [
            {
              "$type": "padding",
              "horizontal": 16,
            },
          ]
        }
        onGlobalEvent={[Function]}
        spacing={12}
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "buttonStyle",
                "style": "plain",
              },
              {
                "$type": "accessibilityLabel",
                "label": "Very Long Display Name That Might Get Truncated",
              },
            ]
          }
          onButtonPress={[Function]}
          onGlobalEvent={[Function]}
          testID="new-message-view-item-long.name"
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "contentShape",
                  "kind": undefined,
                  "shape": "rectangle",
                },
              ]
            }
            onGlobalEvent={[Function]}
            spacing={12}
          >
            <ViewManagerAdapter_ExpoUI
              expoInternalSizeFromChildren={true}
              layoutRoot={false}
              matchContents={true}
            >
              <View
                accessibilityLabel="long.name's avatar"
                accessible={true}
                style={
                  [
                    {
                      "borderRadius": 4,
                      "height": 30,
                      "width": 30,
                    },
                    undefined,
                  ]
                }
                testID="avatar"
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="cover"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={30}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  priority="high"
                  sfEffect={null}
                  source={
                    [
                      {
                        "headers": {
                          "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                        },
                        "uri": "https://open.rocket.chat/avatar/long.name?format=png&size=60",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 30,
                      "width": 30,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={30}
                />
              </View>
            </ViewManagerAdapter_ExpoUI>
            <ViewManagerAdapter_ExpoUI
              alignment="leading"
              spacing={2}
            >
              <ViewManagerAdapter_ExpoUI
                modifiers={
                  [
                    {
                      "$type": "lineLimit",
                      "limit": 1,
                      "reservesSpace": undefined,
                    },
                    {
                      "$type": "font",
                      "size": 16,
                      "weight": "medium",
                    },
                    {
                      "$type": "foregroundStyle",
                      "style": {
                        "color": "#2F343D",
                        "type": "color",
                      },
                    },
                  ]
                }
                onGlobalEvent={[Function]}
                text="Very Long Display Name That Might Get Truncated"
              />
            </ViewManagerAdapter_ExpoUI>
            <ViewManagerAdapter_ExpoUI />
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "buttonStyle",
                "style": "borderless",
              },
              {
                "$type": "disabled",
                "disabled": false,
              },
              {
                "$type": "accessibilityLabel",
                "label": "Voice call",
              },
            ]
          }
          onButtonPress={[Function]}
          onGlobalEvent={[Function]}
          testID="new-message-view-item-long.name-call"
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "font",
                  "size": 20,
                },
                {
                  "$type": "foregroundStyle",
                  "style": {
                    "color": "#2F343D",
                    "type": "color",
                  },
                },
              ]
            }
            systemName="phone"
          />
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </ViewManagerAdapter_ExpoUI>
  </View>
</View>
`;

exports[`Story Snapshots: NoVoiceCallPermission should match snapshot 1`] = `
<View
  style={
    {
      "flex": 1,
      "minHeight": 100,
      "padding": 24,
    }
  }
>
  <View
    style={
      [
        {
          "marginHorizontal": 16,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
        undefined,
        undefined,
      ]
    }
  >
    <ViewManagerAdapter_ExpoUI
      colorScheme="light"
      ignoreSafeArea="all"
      layoutDirection="leftToRight"
      style={
        [
          {
            "width": "100%",
          },
          {
            "height": 54,
          },
        ]
      }
    >
      <ViewManagerAdapter_ExpoUI
        modifiers={
          [
            {
              "$type": "padding",
              "horizontal": 16,
            },
          ]
        }
        onGlobalEvent={[Function]}
        spacing={12}
      >
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "buttonStyle",
                "style": "plain",
              },
              {
                "$type": "accessibilityLabel",
                "label": "John Doe",
              },
            ]
          }
          onButtonPress={[Function]}
          onGlobalEvent={[Function]}
          testID="new-message-view-item-john.doe"
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "contentShape",
                  "kind": undefined,
                  "shape": "rectangle",
                },
              ]
            }
            onGlobalEvent={[Function]}
            spacing={12}
          >
            <ViewManagerAdapter_ExpoUI
              expoInternalSizeFromChildren={true}
              layoutRoot={false}
              matchContents={true}
            >
              <View
                accessibilityLabel="john.doe's avatar"
                accessible={true}
                style={
                  [
                    {
                      "borderRadius": 4,
                      "height": 30,
                      "width": 30,
                    },
                    undefined,
                  ]
                }
                testID="avatar"
              >
                <ViewManagerAdapter_ExpoImage
                  borderRadius={4}
                  containerViewRef={{"current":"Object"}}
                  contentFit="cover"
                  contentPosition={
                    {
                      "left": "50%",
                      "top": "50%",
                    }
                  }
                  height={30}
                  nativeViewRef={{"current":"NativeComponent"}}
                  onError={[Function]}
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  onProgress={[Function]}
                  placeholder={[]}
                  priority="high"
                  sfEffect={null}
                  source={
                    [
                      {
                        "headers": {
                          "User-Agent": "RC Mobile; ios unknown; vunknown (unknown)",
                        },
                        "uri": "https://open.rocket.chat/avatar/john.doe?format=png&size=60",
                      },
                    ]
                  }
                  style={
                    {
                      "borderRadius": 4,
                      "height": 30,
                      "width": 30,
                    }
                  }
                  symbolSize={null}
                  symbolWeight={null}
                  transition={null}
                  width={30}
                />
              </View>
            </ViewManagerAdapter_ExpoUI>
            <ViewManagerAdapter_ExpoUI
              alignment="leading"
              spacing={2}
            >
              <ViewManagerAdapter_ExpoUI
                modifiers={
                  [
                    {
                      "$type": "lineLimit",
                      "limit": 1,
                      "reservesSpace": undefined,
                    },
                    {
                      "$type": "font",
                      "size": 16,
                      "weight": "medium",
                    },
                    {
                      "$type": "foregroundStyle",
                      "style": {
                        "color": "#2F343D",
                        "type": "color",
                      },
                    },
                  ]
                }
                onGlobalEvent={[Function]}
                text="John Doe"
              />
            </ViewManagerAdapter_ExpoUI>
            <ViewManagerAdapter_ExpoUI />
          </ViewManagerAdapter_ExpoUI>
        </ViewManagerAdapter_ExpoUI>
        <ViewManagerAdapter_ExpoUI
          modifiers={
            [
              {
                "$type": "buttonStyle",
                "style": "borderless",
              },
              {
                "$type": "disabled",
                "disabled": false,
              },
              {
                "$type": "accessibilityLabel",
                "label": "Voice call",
              },
            ]
          }
          onButtonPress={[Function]}
          onGlobalEvent={[Function]}
          testID="new-message-view-item-john.doe-call"
        >
          <ViewManagerAdapter_ExpoUI
            modifiers={
              [
                {
                  "$type": "font",
                  "size": 20,
                },
                {
                  "$type": "foregroundStyle",
                  "style": {
                    "color": "#2F343D",
                    "type": "color",
                  },
                },
              ]
            }
            systemName="phone"
          />
        </ViewManagerAdapter_ExpoUI>
      </ViewManagerAdapter_ExpoUI>
    </ViewManagerAdapter_ExpoUI>
  </View>
</View>
`;
